--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,13 +10,17 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include layout="@layout/app_bar_home"/>
-        <include layout="@layout/bottom_nav_layout"/>
+
+        <include layout="@layout/app_bar_home" />
+
+        <!--<include layout="@layout/bottom_nav_layout" />-->
     </RelativeLayout>
+
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationview"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity = "start"
+        android:layout_gravity="start"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/nav_menu"></com.google.android.material.navigation.NavigationView>
 
