--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#ffff</color>
     <color name="colorBlue">#3F51B5</color>
+    <color name="colorBlack">#000000</color>
 </resources>
